Made changes for password input on login and register pages

--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
             <input class="form-control mx-auto w-auto" placeholder = "Email" required autocomplete="off" name = "email">
         </div>
         <div class = "mb-3">
-            <input class="form-control mx-auto w-auto" autocomplete = "off" name = "password" required placeholder="Password">
+            <input class="form-control mx-auto w-auto" type = "password" autocomplete = "off" name = "password" required placeholder="Password">
         </div>
         <div>
             <button class = "btn btn-primary" type = "submit">Register</button>
