--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
             <input class="form-control mx-auto w-auto" placeholder = "Email" autocomplete="off" required name = "email">
         </div>
         <div class = "mb-3">
-            <input class="form-control mx-auto w-auto" autocomplete = "off" name = "password" required placeholder="Password">
+            <input type = "password" class="form-control mx-auto w-auto" autocomplete = "off" name = "password" required placeholder="Password">
         </div>
         <div>
             <button class = "btn btn-primary" type = "submit">Log In</button>
