Made specific email entering on Login and Register page

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
             <input class="form-control mx-auto w-auto" placeholder = "Username" autofocus required autocomplete="off" name = "username">
         </div>
         <div class = "mb-3">
-            <input class="form-control mx-auto w-auto" placeholder = "Email" autocomplete="off" required name = "email">
+            <input class="form-control mx-auto w-auto" type = "email" placeholder = "Email" autocomplete="off" required name = "email">
         </div>
         <div class = "mb-3">
             <input type = "password" class="form-control mx-auto w-auto" autocomplete = "off" name = "password" required placeholder="Password">
