--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
             <input class="form-control mx-auto w-auto" placeholder = "Username" required autofocus autocomplete="off" name = "username">
         </div>
         <div class = "mb-3">
-            <input class="form-control mx-auto w-auto" placeholder = "Email" required autocomplete="off" name = "email">
+            <input class="form-control mx-auto w-auto" type = "email" placeholder = "Email" required autocomplete="off" name = "email">
         </div>
         <div class = "mb-3">
             <input class="form-control mx-auto w-auto" type = "password" autocomplete = "off" name = "password" required placeholder="Password">
